@@ -3205,7 +3205,6 @@ with_list	: with_item
 				{ $$ = make_node (nod_list, 2, $1, $3); }
 		;
 
-// ASF: Create derived table with nested union to fix CORE-1246
 with_item	: symbol_table_alias_name derived_column_list AS '(' select_expr ')'
 				{ $$ = make_node (nod_derived_table, (int) e_derived_table_count, $5, $1, $2, NULL); }
 		;
