@@ -2,6 +2,11 @@
   * v2.1 Beta 1
   **************
 
+    * Bugfix CORE-1306
+         Indices not used for views
+      Contributor(s):
+        Adriano dos Santos Fernandes <adrianosf at uol.com.br>
+
     * Bugfix CORE-1303
 		Infinite loop in SS remote listener
       Contributor(s):
@@ -72,6 +77,11 @@
         Incorrect timestamp arithmetics when one of the operands is negative number
       Contributor(s):
         Vlad Horsun <hvlad at users.sourceforge.net>
+
+    * Bugfix CORE-1246
+         Incorrect column values with outer joins and derived tables
+      Contributor(s):
+        Adriano dos Santos Fernandes <adrianosf at uol.com.br>
 
     * Bugfix CORE-1245
         Incorrect column values with outer joins and views
